# Sub0h264

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  STYLE_GUIDE.md
.claude/commands/: spec-lookup.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cmake/: Sub0h264Config.cmake.in  esp32p4_flash_and_test.cmake  esp32p4_serial_capture.py  smartflash.cmake
components/libavc_decoder/: CMakeLists.txt
components/sub0h264/: CMakeLists.txt
components/sub0h264/include/sub0h264/: sub0h264.hpp  sub0h264_types.hpp
components/sub0h264/platform/generic/: sub0h264_platform_generic.cpp
components/sub0h264/platform/riscv_pie/: sub0h264_platform_pie.cpp
components/sub0h264/platform/x86/: sub0h264_platform_x86.cpp
components/sub0h264/src/: annexb.hpp  bitstream.hpp  cabac.hpp  cabac_init_mn.hpp  cabac_mb_parser.hpp  cabac_neighbor.hpp  cabac_parse.hpp  cabac_spec.hpp  cavlc.hpp  cavlc_tables.hpp  deblock.hpp  decode_timing.hpp  decode_trace.hpp  decoder.hpp  dpb.hpp  frame.hpp  frame_verify.hpp  inter_pred.hpp  intra_pred.hpp  motion.hpp  nal.hpp  param_sets.hpp  pps.hpp  scaling_list.hpp  slice.hpp  sps.hpp  sub0h264.cpp  sub0h264_platform.hpp  sub0h264_unity.cpp  tables.hpp  transform.hpp
docs/: cross-build-test-pattern.md  decoder_architecture.md  known_issues.md  performance_log.md  run_all_history.jsonl  run_all_report.md  shootout.md  trace_tool_design.md
docs/ai-guides/: coding-style.md  spec-tables-refactor-plan.md
docs/optimization/: esp32p4_hierarchical_plan.md  execution_plan.md  fix_theme_analysis.md  kpi_gates.json
docs/optimization/opportunities/: L1.1_row_based_deblock.md  L1.2_eliminate_currentframe.md  L1.3_static_context_arrays.md  L2.1_diagonal_mc_2pass.md  L2.2_skip_zero_mv_fast_path.md  L2.3_deblock_bs_cache.md  L2.4_horizontal_edge_transpose.md  L3.1_reference_prefetch.md  L3.2_frame_alignment.md  L3.3_direct_frame_mc.md  L3.4_mb_context_packing.md  L4.1_branchless_clipu8.md  L4.2_deblock_inline_rows.md  L4.3_cavlc_coeff_token_lut.md  L4.4_idct_4x4_unroll.md  L4.5_getsample_elimination.md  L5.1_compiler_hints.md  L5.2_bitreader_refill.md  L5.3_pie_simd_catalog.md  README.md
reference_decoder/: CMakeLists.txt
reference_decoder/include/spec_ref/: spec_ref.hpp
reference_decoder/src/: spec_ref_cabac.hpp  spec_ref_cabac_init.hpp  spec_ref_cabac_parse.hpp  spec_ref_decode.hpp  spec_ref_intra_pred.hpp  spec_ref_tables.hpp  spec_ref_transform.hpp  spec_ref_unity.cpp
reference_decoder/tests/: test_diag.cpp  test_spec_ref.cpp
scripts/: analyze_decode.py  capture_tapo_stream2.py  check_chroma_mc.py  check_chroma_quality.py  check_dc_block_bits.py  check_emulation_bytes.py  check_encoder_info.py  check_rbsp_bits.py  check_spec_compliance.py  check_vlc_table.py  compare_block7.py  compare_frame.py  compare_frame0.py  compare_idr_ref.py  compare_mb_pixels.py  compare_pframe.py  compare_yuv_frames.py  compare_yuv_planes.py  count_jm_slices.py  debug_mb3_bouncing.py  decode_and_compare.py  diff_traces.py  diff_vlc_tables.py  dump_cabac_init.py  dump_full_trace.py  extract_chromadc_vlc.py  extract_spec_page_index.py  find_correct_coeffs.py  find_first_pixel_diff.py  forward_dct_block5.py  gdb_debug_block15.txt  gen_bench_fixtures_640x480.py  gen_bench_report.py  gen_block_trace.py  gen_diff_image.py  gen_frame_compare.py  gen_frame_diffs.py  gen_jm_bin_trace.sh  gen_our_bin_trace.sh  gen_p8x8_sub_fixture.py  (+63 more)
test_apps/esp_shootout/: CMakeLists.txt  CMakePresets.json  partitions.csv  sdkconfig.defaults
test_apps/esp_shootout/main/: CMakeLists.txt  main.cpp
test_apps/hello_h264/: CMakeLists.txt  CMakePresets.json  partitions.csv  sdkconfig.defaults
test_apps/hello_h264/main/: CMakeLists.txt  hello_main.cpp
test_apps/lockstep/: CMakeLists.txt  main.cpp
test_apps/shootout/: CMakeLists.txt  main.cpp
test_apps/trace/: CMakeLists.txt  main.cpp
test_apps/unit_tests/: CMakeLists.txt  CMakePresets.json  partitions.csv  sdkconfig.defaults
test_apps/unit_tests/main/: CMakeLists.txt  test_runner.cpp
tests/: CMakeLists.txt  bench_decode.cpp  test_bench.cpp  test_bitstream.cpp  test_bitstream_edge.cpp  test_bitstream_trace.cpp  test_cabac.cpp  test_cabac_diag.cpp  test_cabac_engine.cpp  test_cabac_small.cpp  test_cabac_spec_units.cpp  test_cavlc.cpp  test_cavlc_levels.cpp  test_cavlc_regression.cpp  test_crosscheck.cpp  test_deblock.cpp  test_debug_flatblack.cpp  test_decode_pipeline.cpp  test_fixtures.hpp  test_frame_verify.cpp  test_full_trace.cpp  test_hbands_pixel.cpp  test_iframe.cpp  test_main.cpp  test_mb9_bitcount.cpp  test_nal.cpp  test_pframe.cpp  test_pframe_cabac.cpp  test_pframe_cabac_diag.cpp  test_reconstruct.cpp  test_slice.cpp  test_sources.cmake  test_spec_tables.cpp  test_sps_pps.cpp  test_synthetic_quality.cpp  test_version.cpp
tests/fixtures/: ball_ultrafast.h264  baseline_640x360.h264  baseline_640x480.h264  baseline_640x480_short.h264  bench_ball_baseline_640x480.h264  bench_ball_high_640x480.h264  bench_flat_baseline_640x480.h264  bench_flat_high_640x480.h264  bench_pan_h_baseline_640x480.h264  bench_pan_h_high_640x480.h264  bench_pan_v_baseline_640x480.h264  bench_pan_v_high_640x480.h264  bench_scroll_baseline_640x480.h264  bench_scroll_fast_baseline_640x480.h264  bench_scroll_fast_high_640x480.h264  bench_scroll_high_640x480.h264  bench_still_baseline_640x480.h264  bench_still_high_640x480.h264  bouncing_ball.h264  bouncing_ball_baseline.h264  bouncing_ball_cabac.h264  bouncing_ball_cabac_raw.yuv  bouncing_ball_ionly.h264  bouncing_ball_ionly_baseline.h264  bouncing_ball_ionly_cabac.h264  bouncing_ball_ionly_raw.yuv  cabac_16mb_checkerboard.h264  cabac_16mb_flat.h264  cabac_16mb_gradient.h264  cabac_16mb_noisy.h264  cabac_1mb_blue.h264  cabac_1mb_blue_raw.yuv  cabac_1mb_checkerboard.h264  cabac_1mb_const121.h264  cabac_1mb_const255.h264  cabac_1mb_const64_raw.yuv  cabac_1mb_diag.h264  cabac_1mb_diag_raw.yuv  cabac_1mb_flat_perturb.h264  cabac_1mb_flat_perturb_raw.yuv  (+269 more)
tools/jm_trace/: README.md  jm_trace.patch
